<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <EditText
            android:id="@+id/edit_text_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:autofillHints="name"
            android:hint="@string/contact_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:height="48dp"
            android:autofillHints="phone"
            android:hint="@string/contact_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_text_my_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:height="48dp"
            android:autofillHints="username"
            android:hint="@string/my_display_name"
            android:inputType="text" />


        <CheckBox
            android:id="@+id/check_box_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/include_junior" />


        <Spinner
            android:id="@+id/spinner_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/check_box_immediate_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/immediate_start" />


        <EditText
            android:id="@+id/edit_text_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="phone"
            android:hint="@string/available_from_date"
            android:inputType="number" />

        <Button
            android:id="@+id/button_preview"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/preview_message" />


    </LinearLayout>


</ScrollView>